; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_synch.c_tsleep.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_synch.c_tsleep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NSEC_PER_SEC = common dso_local global i32 0, align 4
@hz = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tsleep(i8* %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  store i32 0, i32* %9, align 4
  %10 = load i32, i32* %8, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %18

12:                                               ; preds = %4
  %13 = load i32, i32* %8, align 4
  %14 = load i32, i32* @NSEC_PER_SEC, align 4
  %15 = load i32, i32* @hz, align 4
  %16 = sdiv i32 %14, %15
  %17 = call i32 @clock_interval_to_deadline(i32 %13, i32 %16, i32* %9)
  br label %18

18:                                               ; preds = %12, %4
  %19 = load i8*, i8** %5, align 8
  %20 = ptrtoint i8* %19 to i32
  %21 = load i32, i32* %6, align 4
  %22 = load i8*, i8** %7, align 8
  %23 = load i32, i32* %9, align 4
  %24 = call i32 @_sleep(i32 %20, i32 %21, i8* %22, i32 %23, i32 (i32)* null, i32* null)
  ret i32 %24
}

declare dso_local i32 @clock_interval_to_deadline(i32, i32, i32*) #1

declare dso_local i32 @_sleep(i32, i32, i8*, i32, i32 (i32)*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
